# liteloaderbds-plugin-template

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  DownloadSDK.cmd  Plugin.sln  PrepareLibraries.cmd  README.md  Template.sln  UpdateSDK.cmd  fetchSDK.cmd  prepareLib.cmd  prepare_libraries.cmd  update_sdk.cmd
.github/workflows/: Build.yml  UpdateSDK.yml  build-template.yml  updateSDK.yml  update_sdk.yml  upstream.yml
Biome_Editor/: BiomeManager.h  Biomes.xlsx  ChunkManager.h  CommandManager.h  Config.h  ScheduleManager.h  Template.vcxproj  Template.vcxproj.filters  Tools.h  Version.h  dllmain.cpp
Lib/: SymDBHelper.lib
SDK/: .gitignore
SDK/Lib/: Chakra.lib  LiteLoader.lib  SymDBHelper.lib
Template/: Plugin.cpp  Template.vcxproj  Template.vcxproj.filters  Version.h  dllmain.cpp
Template/Lib/: SymDBHelper.lib
src/: DLLMain.cpp  Plugin.cpp  Plugin.vcxproj  Resource.h  Resource.rc  Version.h  dllmain.cpp  plugin.cpp  version.h
